--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script type="text/javascript">
         function showHide(id){if(document.getElementById(id).style.display=='none'){document.getElementById(id).style.display='block';document.getElementById('btn_'+id).innerHTML='&uArr;';}else{document.getElementById(id).style.display='none';document.getElementById('btn_'+id).innerHTML='&dArr;';}return true;}
     </script>
-    <link rel="stylesheet" href="/stylesheets/demo.css">
+    <link rel="stylesheet" href="stylesheets/demo.css">
 </head>
 
 <body>
